css/style.css
/* ... */
.probootstrap-footer form .form-control::-webkit-input-placeholder {
  /* Chrome/Opera/Safari */
  color: rgba(255, 255, 255, 0.5);
}

.probootstrap-footer form .form-control::-moz-placeholder {
  /* Firefox 19+ */
  color: rgba(255, 255, 255, 0.5);
}

.probootstrap-footer form .form-control:-ms-input-placeholder {
  /* IE 10+ */
  color: rgba(255, 255, 255, 0.5);
}

.probootstrap-footer form .form-control:-moz-placeholder {
  /* Firefox 18- */
  color: rgba(255, 255, 255, 0.5);
}

.probootstrap-footer form .form-field {
  position: relative;
}

.probootstrap-footer form .btn.btn-subscribe {
  height: 40px;
  line-height: 0px;
  font-size: 12px;
  font-weight: 400;
  text-transform: uppercase;
  letter-spacing: .2em;
  border-radius: 4px;
  border: none;
  position: absolute;
  top: 3px;
  right: 3px;
  padding-left: 15px;
  padding-right: 15px;
  background: #0099ff;
  color: #ffffff;
}

.probootstrap-footer form .btn.btn-subscribe:hover,
.probootstrap-footer form .btn.btn-subscribe:active,
.probootstrap-footer form .btn.btn-subscribe:focus {
  color: #000000;
  background: #ffffff;
}

.probootstrap-footer .copyright p {
  font-size: 15px;
}

.probootstrap-link-wrap {
  padding-left: 40px;
}

@media screen and (max-width: 970px) {
  .probootstrap-link-wrap {
    padding-left: 0;
  }
}

.stack-link {
  padding: 0;
  margin: 0;
  display: block;
}

.stack-link li {
  list-style: none;
  padding: 0;
  margin: 0 0 10px 0;
}

.stack-link small {
  font-size: 12px;
  color: rgba(255, 255, 255, 0.2);
}

.stack-link a:hover small {
  color: #ffffff;
}

.section-heading {
  margin-bottom: 50px;
}

.section-heading h2 {
  font-weight: 300;
  text-transform: uppercase;
  font-family: "Open Sans", sans-serif;
}

.lead {
  font-size: 1.125em;
  line-height: 1.65;
}

figure {
  margin-bottom: 30px;
}

figure figcaption {
  margin-top: 20px;
  display: block;
  color: rgba(255, 255, 255, 0.3);
  font-size: 14px;
  font-style: italic;
  -webkit-transition: .3s all ease;
  transition: .3s all ease;
}

figure:hover figcaption,
figure:focus figcaption {
  color: rgba(255, 255, 255, 0.9);
}

.img-border {
  border: 2px solid rgba(255, 255, 255, 0.1);
  padding: 10px;
}

.probootstrap-panel .panel {
  background: none;
  border: none;
  margin-bottom: 0 !important;
  margin-top: 0 !important;
}

.probootstrap-panel .panel .panel-title {
  margin: 0 !important;
  padding: 0 !important;
}

.probootstrap-panel .panel .panel-heading {
  background: none;
  border-bottom: 2px solid rgba(255, 255, 255, 0.1);
}

.probootstrap-panel .panel .panel-heading a {
  padding-top: 10px !important;
  padding-bottom: 15px !important;
  display: block;
  color: rgba(255, 255, 255, 0.5);
  position: relative;
}

.probootstrap-panel .panel .panel-heading a:after {
  font-family: 'icomoon';
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  /* Better Font Rendering =========== */
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  content: "\e9f7";
  position: absolute;
  top: 50%;
  right: 0;
  -webkit-transform: translateY(-50%);
  transform: translateY(-50%);
}

.probootstrap-panel .panel .panel-heading a:hover {
  color: white;
}

.probootstrap-panel .panel .panel-heading a[aria-expanded="true"] {
  color: #0099ff;
}

.probootstrap-panel .panel .panel-heading a[aria-expanded="true"]:after {
  font-family: 'icomoon';
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  /* Better Font Rendering =========== */
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  content: "\e9e3";
  position: absolute;
  top: 50%;
  right: 0;
  -webkit-transform: translateY(-50%);
  transform: translateY(-50%);
}

.probootstrap-panel .panel .panel-body {
  border: none !important;
}

.probootstrap-panel .panel .panel-body *:last-child {
  margin-bottom: 0;
}

.probootstrap-video {
  position: relative;
}

.probootstrap-video .probootstrap-video-play {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 10;
}

.probootstrap-video .probootstrap-video-play i {
  position: absolute;
  top: 50%;
  left: 50%;
  font-size: 40px;
  color: rgba(255, 255, 255, 0.4);
  -webkit-transform: translateX(-50%) translateY(-50%);
  transform: translateX(-50%) translateY(-50%);
  -webkit-transition: .3s all ease;
  transition: .3s all ease;
}

.probootstrap-video .probootstrap-video-play:hover i {
  color: white;
}

.probootstrap-video .probootstrap-video-play:active,
.probootstrap-video .probootstrap-video-play:focus {
  outline: none;
}

.slides-text {
  z-index: 99;
  position: relative;
  padding-top: 200px;
  max-width: 600px;
  margin: 0 auto;
}

.slides-text h2 {
  font-weight: 100;
  font-size: 50px;
  color: #ffffff;
  text-transform: uppercase;
}

@media screen and (max-width: 768px) {
  .slides-text h2 {
    font-size: 30px;
  }
}

.slides-text p {
  font-size: 18px;
}

@media screen and (max-width: 768px) {
  .slides-text p {
    font-size: 16px;
  }
}

@media screen and (max-width: 768px) {
  .slides-text {
    padding-top: 50px;
  }
}

.probootstrap-card {
  margin-bottom: 30px;
  float: left;
  width: 100%;
}

.probootstrap-card .probootstrap-card-media.icon {
  font-size: 30px;
}

.probootstrap-card .probootstrap-card-media.svg-sm .svg {
  height: 80px;
  margin-bottom: 0;
}

.probootstrap-card .probootstrap-card-media.colored .svg {
  fill: #0099ff;
}

.probootstrap-card .probootstrap-card-text {
  padding: 20px;
}

.probootstrap-card .probootstrap-card-text .probootstrap-card-heading {
  margin-top: 0;
  margin-bottom: 20px;
}

.probootstrap-card .probootstrap-card-text p:last-child {
  margin-bottom: 0;
}

.probootstrap-card.probootstrap-listing {
  margin-bottom: 20px;
  background: #ffffff;
  float: left;
  width: 100%;
  -webkit-transition: .3s all ease-in-out;
  transition: .3s all ease-in-out;
  position: relative;
  top: 0;
}
/* ... */

